# EEG_Mind_to_text

./: .env.example  .gitignore  README.md  classical.py  eegnet_final.py  environment.prml-p300.yml  pyproject.toml  requirements.txt
classical/: gaussian_nb.py  knn.py  lda.py  logistic_regression.py  svm_linear.py  svm_rbf.py
scripts/: run_eegnet_all_subjects.py  slurm_eegnet_sweep.sbatch  slurm_eegnet_sweep_stage2.sbatch  tune_eegnet_sweep.py
src/eeg_bci/: __init__.py  cli.py  config.py  dataset.py  decoding.py  eegnet_pipeline.py  features.py  inference.py  modeling.py  preprocessing.py  training.py
