[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-bci-mind-to-text"
version = "0.1.0"
description = "P300 EEG-based BCI for mind-to-text communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "joblib>=1.3",
]

[project.scripts]
eeg-bci = "eeg_bci.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
